examples/errors/parsing/top-level-garbage.cn
fun f : Int -> Int [pure] = {
  n -> n
}

let garbage = 5;

main : () [impure] = ()
